Fix iframe contents overflowing the iframe on iOS, causing the desktop site to be displayed when a width=device-width viewport tag is set. (jud)

--- a/pagespeed/opt/mobilize/mobilize.css
+++ b/pagespeed/opt/mobilize/mobilize.css
@@ -55,6 +55,12 @@ body.mob-iframe {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+
+  /* This, along with the settings on #psmob-iframe below, ensure that the
+   * iframe contents do not expand past the viewport size.
+   * http://stackoverflow.com/questions/23083462/how-to-get-an-iframe-to-be-responsive-in-ios-safari
+   */
+  -webkit-overflow-scrolling: touch;
 }
 
 #psmob-iframe {
@@ -64,7 +70,12 @@ body.mob-iframe {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  width: 100%;
+  /* This, along with setting scrolling="no" on the iframe, ensure the iframe
+   * contents do not expand the iframe on ios.
+   * http://stackoverflow.com/questions/23083462/how-to-get-an-iframe-to-be-responsive-in-ios-safari
+   */
+  width: 1px;
+  min-width: 100%;
 }
 
 #psmob-header-bar {
